--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,56 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -moz-outline-radius: unset;
+  outline: none;
+  color: inherit;
+  scrollbar-color: rgba(93, 93, 255, 0.9) #7d8784 !important;
+  scrollbar-width: thin !important;
+  font-family: Verdana, Geneva, Tahoma, 'arial', 'Times New Roman', tahoma;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+  opacity: 0.5;
+  overflow-x: hidden;
+}
+
+*::-webkit-scrollbar-track {
+  background: #7d8784;
+  border-radius: 5px;
+  opacity: 0.5;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: rgba(133, 133, 248, 0.9);
+  border-radius: 5px;
+  opacity: 0.9;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: rgba(93, 93, 255, 0.9);
+  opacity: 0.5;
+}
+
+html {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  overflow: hidden;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  width: 100%;
+  height: 100%;
 }
