--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,56 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -moz-outline-radius: unset;
+  outline: none;
+  color: inherit;
+  scrollbar-color: rgba(93, 93, 255, 0.9) #7d8784 !important;
+  scrollbar-width: thin !important;
+  font-family: Verdana, Geneva, Tahoma, 'arial', 'Times New Roman', tahoma;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+*::-webkit-scrollbar {
+  width: 10px;
+  opacity: 0.5;
+  overflow-x: hidden;
 }
-a:hover {
-  color: #535bf2;
+
+*::-webkit-scrollbar-track {
+  background: #7d8784;
+  border-radius: 5px;
+  opacity: 0.5;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: rgba(133, 133, 248, 0.9);
+  border-radius: 5px;
+  opacity: 0.9;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background: rgba(93, 93, 255, 0.9);
+  opacity: 0.5;
+}
+
+html {
+  width: 100%;
+  height: 100%;
 }
 
 body {
-  margin: 0;
+  position: relative;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  font-size: 16px;
+  overflow: hidden;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+#root {
+  width: 100%;
+  height: 100%;
 }
