better customizable css for table

--- a/lib/components/Table/logic/helpers/TableBody/TableBody.module.scss
+++ b/lib/components/Table/logic/helpers/TableBody/TableBody.module.scss
@@ -1,6 +1,12 @@
 .tableBody {
-  height: 100%;
+  display: block;
+  height: calc(100% - 45px);
   overflow: auto;
+}
+
+.tableDataRow {
+  display: inline-table;
+  width: 100%;
 }
 
 .defaultTableDataRowStyle {
