--- a/lib/components/Table/logic/helpers/TableBody/TableBody.module.scss
+++ b/lib/components/Table/logic/helpers/TableBody/TableBody.module.scss
@@ -1,24 +1,24 @@
-.tableDataRow {
+.tableBodyTR {
   width: 100%;
 }
 
-.defaultTableDataRowStyle {
+.defaultTableBodyTRStyle {
   color: black;
   background-color: white;
 }
 
-.defaultTableDataRowStyle:nth-child(even) {
+.defaultTableBodyTRStyle:nth-child(even) {
   background-color: rgb(216, 226, 250);
 }
 
-.defaultTableDataCellStyle {
+.defaultTableBodyTDStyle {
   padding: 10px;
 }
 
-:global(.tk-table-data-row):last-child .defaultTableDataCellStyle:last-child {
+:global(.tk-table-body-tr):last-child .defaultTableBodyTDStyle:last-child {
   border-radius: 0 0 6px 0;
 }
 
-:global(.tk-table-data-row):last-child .defaultTableDataCellStyle:first-child {
+:global(.tk-table-body-tr):last-child .defaultTableBodyTDStyle:first-child {
   border-radius: 0 0 0 6px;
 }
