columnHeader has display flex now

--- a/lib/components/Table/logic/helpers/ColumnHeader/ColumnHeader.module.scss
+++ b/lib/components/Table/logic/helpers/ColumnHeader/ColumnHeader.module.scss
@@ -1,3 +1,9 @@
+.columnHeader {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+
 .columnHeaderTitle::first-letter {
   text-transform: uppercase;
 }
