BUGFIX: added white-space nowrap to table headers. because of sticky solution to th, header value cannot wrap

--- a/lib/components/Table/logic/helpers/TableHeader/TableHeader.module.scss
+++ b/lib/components/Table/logic/helpers/TableHeader/TableHeader.module.scss
@@ -47,6 +47,10 @@
   align-items: center;
 }
 
+.tableHeaderValue {
+  white-space: nowrap;
+}
+
 .tableHeaderValue::first-letter {
   text-transform: uppercase;
 }
