Table now supports basic sorting and also multi-sorting

--- a/lib/components/Table/logic/helpers/TableHeader/TableHeader.module.scss
+++ b/lib/components/Table/logic/helpers/TableHeader/TableHeader.module.scss
@@ -42,9 +42,10 @@
 
 .tableHeaderContentWrapper {
   display: flex;
-  width: 100%;
   justify-content: space-between;
   align-items: center;
+  gap: 10px;
+  width: 100%;
 }
 
 .tableHeaderValue {
