found a different way to implement sticky headers
Pros:

- positioning is perfect out-of-the-box. lines aren't apearing behind headers when scrolling.
- no need to play with bg inherit or border-radius inherit. it plays well with those as well.
- no need for the bgPlay div

Cons:

- header cannot have borders. ever. thead apparently do not support them.

--- a/lib/components/Table/logic/TableParts/TableHeader/TableHeader.module.scss
+++ b/lib/components/Table/logic/TableParts/TableHeader/TableHeader.module.scss
@@ -1,43 +1,15 @@
 .tableHeaderTHead {
-  width: 100%;
-  background-color: inherit;
-}
-
-.tableHeaderTR {
-  width: 100%;
-  background-color: inherit;
-}
-
-.tableHeaderTH {
   position: sticky;
   top: 0;
-  background-color: inherit;
 }
 
-// IMPORTANT!!! this is the div that allows to table header to have rounded edges, without the td's background be visible while scrolling.
-.tableHeaderDivBgPlay {
-  position: relative;
-  top: -0.5px;
-  background-color: inherit;
+.defaultTableHeaderTRStyle {
+  background-color: rgb(53, 80, 255);
+  color: white;
 }
 
 .defaultTableHeaderDiv {
   padding: 10px;
-  background-color: rgb(53, 80, 255);
-  border-left: 1px solid white;
-  color: white;
-}
-
-.tableHeaderTH:first-child .defaultTableHeaderDiv {
-  border-left: none;
-}
-
-.tableHeaderTH:first-child .defaultTableHeaderDiv {
-  border-radius: 6px 0 0 0;
-}
-
-.tableHeaderTH:last-child .defaultTableHeaderDiv {
-  border-radius: 0 6px 0 0;
 }
 
 .tableHeaderContentWrapper {
