TableHeader is now making use of the ColumnResizer component

--- a/lib/components/Table/logic/TableParts/TableHeader/TableHeader.module.scss
+++ b/lib/components/Table/logic/TableParts/TableHeader/TableHeader.module.scss
@@ -3,6 +3,10 @@
   top: 0;
 }
 
+.tableHeaderTH {
+  position: relative;
+}
+
 .defaultTableHeaderTRStyle {
   background-color: rgb(53, 80, 255);
   color: white;
