--- a/src/components/Toggle/ToggleMark/ToggleMark.module.scss
+++ b/src/components/Toggle/ToggleMark/ToggleMark.module.scss
@@ -4,18 +4,18 @@
   transform: translateY(-50%);
   border: 1px solid black;
   border-radius: 50%;
-  height: 98%;
+  height: 100%;
   aspect-ratio: 1/1;
   transition: all 0.2s;
 }
 
 .toggleMarkUnchecked {
-  left: 1px;
+  left: 0;
   background-color: rgb(79, 77, 77);
 }
 
 .toggleMarkChecked {
-  left: calc(100% - 1px);
+  left: calc(100%);
   transform: translateY(-50%) translateX(-100%);
   background-color: rgb(24, 130, 251);
 }
