added my famous webapp

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @tailwind variants; */
 
 * {
   margin: 0;
@@ -9,6 +10,8 @@
   -moz-outline-radius: unset;
   outline: none;
   color: inherit;
+  scrollbar-color: rgba(93, 93, 255, 0.9) #7d8784 !important;
+  scrollbar-width: thin !important;
   font-family: Verdana, Geneva, Tahoma, 'arial', 'Times New Roman', tahoma;
 }
 
@@ -35,23 +38,91 @@
   opacity: 0.5;
 }
 
-html {
-  width: 100%;
-  height: 100%;
+@layer base {
+  html {
+    @apply w-full;
+    @apply h-full;
+  }
+
+  body {
+    @apply relative;
+    @apply flex;
+    @apply flex-col;
+    @apply items-center;
+    @apply justify-center;
+    @apply w-full;
+    @apply h-full;
+    @apply text-sm;
+    overflow: hidden;
+  }
+
+  #root {
+    @apply w-full;
+    @apply h-full;
+  }
+
+  /* width */
+  body::-webkit-scrollbar {
+    width: 12px;
+    opacity: 0.5;
+    overflow-x: hidden;
+  }
+
+  /* Track */
+  body::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 5px;
+    /*box-shadow: inset 0 0 5px grey;*/
+    opacity: 0.5;
+  }
+
+  /* Handle */
+  body::-webkit-scrollbar-thumb {
+    background: rgba(255, 93, 223, 0.2);
+    border-radius: 5px;
+  }
+
+  /* Handle on hover */
+  body::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 41, 41, 0.5);
+  }
 }
 
-body {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  font-size: 16px;
-}
+/* @layer components {} */
 
-#root {
-  width: 100%;
-  height: 100%;
+@layer utilities {
+  .no-scrollbar {
+    /* IE and Edge */
+    -ms-overflow-style: none;
+
+    /* Firefox */
+    scrollbar-width: none;
+  }
+
+  /* Chrome Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* width */
+  .scrollbar-thin::-webkit-scrollbar {
+    width: 4px;
+    opacity: 0.5;
+    overflow-x: hidden;
+  }
+
+  /* Track */
+  .scrollbar-thin::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 5px;
+    /*box-shadow: inset 0 0 5px grey;*/
+    opacity: 0.5;
+  }
+
+  /* Handle */
+  .scrollbar-thin::-webkit-scrollbar-thumb {
+    background: rgba(161, 161, 255, 0.5);
+    border-radius: 5px;
+    opacity: 0.5;
+  }
 }
