--- a/lib/components/Table/Table.module.scss
+++ b/lib/components/Table/Table.module.scss
@@ -43,13 +43,15 @@
   opacity: 0.5;
 }
 
-.table {
-  // height: 100%; /* <--- do not give 100% height, since if you do, rows' height would be stretched to fill the table's container */
-  width: 100%; // <--- gets overridden by style={{ width: getCenterTotalSize() }}
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+// .table {
+// height: 100%; /* <--- do not give 100% height, since if you do, rows' height would be stretched to fill the table's container */
+// width: 100%; // <--- gets overridden by style={{ width: getCenterTotalSize() }}
+// border-collapse: collapse;
+// border-spacing: 0;
+// border: 1px solid lightgray;
+// width: fit-content;
+// }
 
-.table tr {
-  scroll-snap-align: start;
-}
+// .table :global(.tk-table-body-tr) {
+// scroll-snap-align: start;
+// }
